trying to fix links displayed on mobile

--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ a {
 }
 /* mobile */
 navbutton{
+    display: inline-block;
     width: 100%;
     margin: 100%;
     
